<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource"
    tools:layout_editor_absoluteY="25dp"
    android:background="@android:color/holo_blue_light"
    android:backgroundTint="@android:color/holo_blue_light">


<TextView
        android:id="@+id/t_hangman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/s_t_aflevering_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginBottom="14dp"
        android:text="@string/s_b_play_game"
        app:layout_constraintBottom_toTopOf="@+id/t_guessLetter"
        app:layout_constraintStart_toEndOf="@+id/t_guessLetter" />

    <Button
        android:id="@+id/b_guess_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="11dp"
        android:text="@string/s_b_guess_letter"
        app:layout_constraintBottom_toTopOf="@+id/hangMan"
        app:layout_constraintStart_toEndOf="@+id/hangMan" />

    <Button
        android:id="@+id/b_give_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/s_b_give_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/t_letterGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/s_t_guessLetter_blank"
        app:layout_constraintEnd_toEndOf="@+id/b_play_game"
        app:layout_constraintStart_toStartOf="@+id/t_hangman"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_guessLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="45dp"
        android:text="@string/s_t_guessLetter"
        app:layout_constraintBottom_toBottomOf="@+id/t_letterGuess"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/t_gameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="19dp"
        android:text="temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/hangMan"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/b_give_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_letterGuess"
        app:srcCompat="@drawable/galge" />
</android.support.constraint.ConstraintLayout>